<resources>
    <string name="app_name">CSE 3310 Project</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Home" />
    <string name="Clubs" />

    <!-- Transactions Module -->
    <string name="TransactionsToolbarTitle">Marketplace</string>
    <string name="TransactionsTabShop">SHOP</string>
    <string name="TransactionsTabSell">SELL</string>
    <string name="TransactionsTabWishlist">WISHLIST</string>
    <string name="TransactionsTabCart">CART</string>
    <string name="TransactionsHeaderCategories">Categories</string>
    <string name="TransactionsShopHeader">Available Listings</string>
    <string name="cover">Cover</string>
    <string name="title_activity_transactions_product_view">TransactionsProductViewActivity</string>
    <string name="TransactionsProductSpinnerTitle">Select</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string-array name="TransactionsProductSpinnerItems">
        <item>Sell</item>
        <item>Lend</item>
        <item>Exchange</item>
    </string-array>

    <string name="Open" />
    <string name="Close" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Create_Post">Create Post</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="status">Status</string>
    <string name="logout">Logout</string>

    <!-- Search Functionality -->
    <string name="search_hint">Enter Search Term</string>
    <string name="app_label">temp app label</string>
    <string name="discussions">Discussions</string>
    <string name="messages">Messages</string>
    <string name="marketplace">Marketplace</string>
    <string name="tutoring">Tutoring</string>
    <string name="clubs">Clubs</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="title_activity_club">clubActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="form_club">Form Club</string>
    <string name="contacts">Contacts</string>
    <string name="club_menu">Club Menu</string>
    <string name="about">About</string>
    <string name="input_message">Input message...</string>
    <string name="Reset_Your_Password"><u>Reset Your Password</u></string>
</resources>