<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/UTA_BLUE">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/prof_image"
        android:layout_width="200dp"
        android:layout_height="270dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:scaleType="centerCrop"
        android:src="@color/UTA_BLUE"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_username"
        android:textColor="@color/white"
        android:layout_below="@id/prof_image"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_edit_24"
        android:drawablePadding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_status"
        android:textColor="@color/white"
        android:layout_below="@id/set_username"
        android:inputType="textMultiLine"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/status"
        android:textColorHint="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_message_24"
        android:drawablePadding="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_profileBtn"
        android:backgroundTint="@color/UTA_ORANGE"
        app:cornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/set_status"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/update_profile"
        android:textColor="@color/white"/>

</RelativeLayout>